# data_stories

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yaml
output/aid_to_africa/: eu_africa_share.csv  g7_eui_africa_share.csv
output/health_oda/: bilat_vs_multilat.csv  g7_health_share_trend.csv  health_share_trend.csv  health_with_without_covid.csv  pre_post_covid_trend.csv  top5_multi.csv  total_health_oda_trend.csv
raw_data/: data_updates.json  pydeflate_dac1.feather  table1_raw_2022_2023.feather  table1_raw_2023_2023.feather
stories/: config.py
stories/aid_to_africa/: g7_historical_share.py  g7_plus_eui.py
stories/eu27_targets/: common.py  eui_share.py  final_analysis.py  growth.py  oda.py  oda_projections.py  tools.py  ukraine.py
stories/eu27_targets/EU ODA/: observablehq.config.js  package-lock.json
stories/eu27_targets/EU ODA/docs/: index.md
stories/eu27_targets/EU ODA/src/: index.md  research.md
stories/eu27_targets/EU ODA/src/data/: additional_spending_yearly.csv  eu27_column_chart_2014_2034.csv  scenario_totals.json
stories/health_oda/: common.py  g7.py  get_oda.py  multi_vs_bi.py  trends.py
stories/total_debt/: total_debt.py
stories/uk_oda/: total_oda.py
