[tool.poetry]
description = "Data stories from The ONE Campaign"
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
bblocks = "^1.3.2"
oda-data = "^1.2.0"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
oda-reader = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
